# Elektron-SDK

./: .gitignore  README.md
Cpp-C/: CMakeLists.txt
Cpp-C/Ema/: README.md
Cpp-C/Ema/Docs/HTML/Concepts_Guide/: Chap_API_Intro.1.1.html  Chap_API_Intro.1.2.html  Chap_API_Intro.1.3.html  Chap_API_Intro.1.4.html  Chap_API_Intro.1.5.html  Chap_API_Intro.1.6.html  Chap_API_Intro.1.7.html  Chap_API_Intro.1.8.html  Chap_Consumers_Providers.3.01.html  Chap_Consumers_Providers.3.02.html  Chap_Consumers_Providers.3.03.html  Chap_Consumers_Providers.3.04.html  Chap_Consumers_Providers.3.05.html  Chap_Consumers_Providers.3.06.html  Chap_Consumers_Providers.3.07.html  Chap_Consumers_Providers.3.08.html  Chap_Consumers_Providers.3.09.html  Chap_Consumers_Providers.3.10.html  Chap_Consumers_Providers.3.11.html  Chap_Consumers_Providers.3.12.html  Chap_Consumers_Providers.3.13.html  Chap_Consumers_Providers.3.14.html  Chap_Consumers_Providers.3.15.html  Chap_Consumers_Providers.3.16.html  Chap_Consumers_Providers.3.17.html  Chap_Consumers_Providers.3.18.html  Chap_Consumers_Providers.3.19.html  Chap_Consumers_Providers.3.20.html  Chap_Consumers_Providers.3.21.html  Chap_Consumers_Providers.3.22.html  Chap_Consumers_Providers.3.23.html  Chap_Consumers_Providers.3.24.html  Chap_DataTypesandMessages.5.1.html  Chap_DataTypesandMessages.5.2.html  Chap_DataTypesandMessages.5.3.html  Chap_DataTypesandMessages.5.4.html  Chap_DataTypesandMessages.5.5.html  Chap_DataTypesandMessages.5.6.html  Chap_DataTypesandMessages.5.7.html  Chap_ProductDescription.2.01.html  (+20 more)
Cpp-C/Ema/Docs/HTML/Documentation_Portal/: EMAC_Doc_Portal.1.1.html  EMAC_Doc_Portal.1.2.html  EMAC_Doc_Portal.1.3.html  EMAC_Doc_Portal.1.4.html
Cpp-C/Ema/Docs/HTML/EMA_Configuration_Guide/: Appendix_XMLConfigFile.html  Chap_ConfigGroups.3.01.html  Chap_ConfigGroups.3.02.html  Chap_ConfigGroups.3.03.html  Chap_ConfigGroups.3.04.html  Chap_ConfigGroups.3.05.html  Chap_ConfigGroups.3.06.html  Chap_ConfigGroups.3.07.html  Chap_ConfigGroups.3.08.html  Chap_ConfigGroups.3.09.html  Chap_ConfigGroups.3.10.html  Chap_ConfigGroups.3.11.html  Chap_ConfigGroups.3.12.html  Chap_ConfigGroups.3.13.html  Chap_ConfigGroups.3.14.html  Chap_ConfigGroups.3.15.html  Chap_ConfigGroups.3.16.html  Chap_ConfigGroups.3.17.html  Chap_ConfigGroups.3.18.html  Chap_ConfigGroups.3.19.html  Chap_ConfigProcessing.4.01.html  Chap_ConfigProcessing.4.02.html  Chap_ConfigProcessing.4.03.html  Chap_ConfigProcessing.4.04.html  Chap_ConfigProcessing.4.05.html  Chap_ConfigProcessing.4.06.html  Chap_ConfigProcessing.4.07.html  Chap_ConfigProcessing.4.08.html  Chap_ConfigProcessing.4.09.html  Chap_ConfigProcessing.4.10.html  Chap_ConfigProcessing.4.11.html  Chap_GlobalConfigParameters.2.1.html  Chap_GlobalConfigParameters.2.2.html  Chap_Intro.1.01.html  Chap_Intro.1.02.html  Chap_Intro.1.03.html  Chap_Intro.1.04.html  Chap_Intro.1.05.html  Chap_Intro.1.06.html  Chap_Intro.1.07.html  (+3 more)
Cpp-C/Ema/Docs/HTML/EMA_Developers_Guide/: Chap_Intro.1.1.html  Chap_Intro.1.2.html  Chap_Intro.1.3.html  Chap_Intro.1.4.html  Chap_Intro.1.5.html  Chap_Intro.1.6.html  Chapter_ConsumerClasses.4.01.html  Chapter_ConsumerClasses.4.02.html  Chapter_ConsumerClasses.4.03.html  Chapter_ConsumerClasses.4.04.html  Chapter_ConsumerClasses.4.05.html  Chapter_ConsumerClasses.4.06.html  Chapter_ConsumerClasses.4.07.html  Chapter_ConsumerClasses.4.08.html  Chapter_ConsumerClasses.4.09.html  Chapter_ConsumerClasses.4.10.html  Chapter_ContainersAndMessages.3.01.html  Chapter_ContainersAndMessages.3.02.html  Chapter_ContainersAndMessages.3.03.html  Chapter_ContainersAndMessages.3.04.html  Chapter_ContainersAndMessages.3.05.html  Chapter_ContainersAndMessages.3.06.html  Chapter_ContainersAndMessages.3.07.html  Chapter_ContainersAndMessages.3.08.html  Chapter_ContainersAndMessages.3.09.html  Chapter_ContainersAndMessages.3.10.html  Chapter_ContainersAndMessages.3.11.html  Chapter_ContainersAndMessages.3.12.html  Chapter_ContainersAndMessages.3.13.html  Chapter_ContainersAndMessages.3.14.html  Chapter_ContainersAndMessages.3.15.html  Chapter_ContainersAndMessages.3.16.html  Chapter_ContainersAndMessages.3.17.html  Chapter_ContainersAndMessages.3.18.html  Chapter_Prod_Desc.2.1.html  Chapter_Prod_Desc.2.2.html  Chapter_Prod_Desc.2.3.html  Chapter_Prod_Desc.2.4.html  Chapter_Prod_Desc.2.5.html  Chapter_Troubleshooting.5.1.html  (+3 more)
Cpp-C/Ema/Docs/HTML/EMA_RDM_Usage_Guide/: EMAC_RDMUsageGuide.1.001.html  EMAC_RDMUsageGuide.1.002.html  EMAC_RDMUsageGuide.1.003.html  EMAC_RDMUsageGuide.1.004.html  EMAC_RDMUsageGuide.1.005.html  EMAC_RDMUsageGuide.1.006.html  EMAC_RDMUsageGuide.1.007.html  EMAC_RDMUsageGuide.1.008.html  EMAC_RDMUsageGuide.1.009.html  EMAC_RDMUsageGuide.1.010.html  EMAC_RDMUsageGuide.1.011.html  EMAC_RDMUsageGuide.1.012.html  EMAC_RDMUsageGuide.1.013.html  EMAC_RDMUsageGuide.1.014.html  EMAC_RDMUsageGuide.1.015.html  EMAC_RDMUsageGuide.1.016.html  EMAC_RDMUsageGuide.1.017.html  EMAC_RDMUsageGuide.1.018.html  EMAC_RDMUsageGuide.1.019.html  EMAC_RDMUsageGuide.1.020.html  EMAC_RDMUsageGuide.1.021.html  EMAC_RDMUsageGuide.1.022.html  EMAC_RDMUsageGuide.1.023.html  EMAC_RDMUsageGuide.1.024.html  EMAC_RDMUsageGuide.1.025.html  EMAC_RDMUsageGuide.1.026.html  EMAC_RDMUsageGuide.1.027.html  EMAC_RDMUsageGuide.1.028.html  EMAC_RDMUsageGuide.1.029.html  EMAC_RDMUsageGuide.1.030.html  EMAC_RDMUsageGuide.1.031.html  EMAC_RDMUsageGuide.1.032.html  EMAC_RDMUsageGuide.1.033.html  EMAC_RDMUsageGuide.1.034.html  (+130 more)
Cpp-C/Ema/Examples/Training/: Training_VS100.sln  Training_VS110.sln  Training_VS120.sln  Training_VS140.sln
Cpp-C/Ema/Src/Access/: CMakeLists.txt  Ema_VS100.vcxproj.filters  Ema_VS110.vcxproj.filters  Ema_VS120.vcxproj.filters  Ema_VS140.vcxproj  Ema_VS140.vcxproj.filters  ema_VS100.vcxproj  ema_VS110.vcxproj  ema_VS120.vcxproj
Cpp-C/Eta/Impl/: CMakeLists.txt  Stubs.sln  cacheStubsShared.vcxproj  cacheStubsStatic.vcxproj  stubsShared.vcxproj  stubsStatic.vcxproj
Cpp-C/Eta/Utils/Libxml2/: CMakeLists.txt
Cpp-C/msbuild/: elek.cpp.final.props  elek.cpp.initial.props  elek.cpp.intermediate.props  elek.cpp.props
(+1231 files in other folders)
