cmake_minimum_required(VERSION 2.8)
project(Ema)


set(
    EMA_FILES
    "${PROJECT_SOURCE_DIR}/../Rdm/Impl/RdmUtilities.cpp"
    "${PROJECT_SOURCE_DIR}/EmaVersion.c"
    "${PROJECT_SOURCE_DIR}/Impl/AckMsg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/AckMsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/AckMsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ActiveConfig.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Attrib.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ChannelCallbackClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ComplexType.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Data.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/DataType.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Decoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/DictionaryCallbackClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/DirectoryCallbackClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ElementEntry.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ElementList.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ElementListDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ElementListEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ElementListSetDef.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaBuffer.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaBufferInt.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaBufferU16.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaBufferU16Int.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaConfigImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaPool.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaString.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EmaStringInt.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/EncodeIterator.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Encoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ExceptionTranslator.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ErrorClientHandler.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FieldEntry.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FieldList.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FieldListDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FieldListEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FieldListSetDef.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FilterEntry.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FilterList.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FilterListDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/FilterListEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/GenericMsg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/GenericMsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/GenericMsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/GetTime.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/HashTable.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ItemCallbackClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Key.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/LoginCallbackClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Map.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/MapDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/MapEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/MapEntry.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Msg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/MsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/MsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Mutex.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/NoDataImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAnsiPage.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAnsiPageDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAnsiPageEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmArray.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmArrayDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmArrayEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmArrayEntry.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAscii.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAsciiDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmBaseImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmBuffer.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmBufferDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumer.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerActiveConfig.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerConfig.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerConfigImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerEvent.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDate.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDateDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDateTime.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDateTimeDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDouble.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDoubleDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmEnum.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmEnumDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmError.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmErrorDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmFloat.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmFloatDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInaccessibleLogFileException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInaccessibleLogFileExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInt.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmIntDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidConfigurationException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidConfigurationExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidHandleException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidHandleExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidUsageException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidUsageExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmLoggerClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmMemoryExhaustionException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmMemoryExhaustionExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNiProviderActiveConfig.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNiProviderConfig.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNiProviderConfigImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNiProviderImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNonRwfEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOpaque.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOpaqueDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOpaqueEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOutOfRangeException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOutOfRangeExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmProvider.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmProviderClient.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmProviderConfig.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmProviderEvent.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmProviderImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmQos.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmQosDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmReal.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmRealDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmRmtes.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmRmtesDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmState.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmStateDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmSystemException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmSystemExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmTime.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmTimeDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUInt.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUIntDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUnsupportedDomainTypeException.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUnsupportedDomainTypeExceptionImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUtf8.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUtf8Decoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmXml.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmXmlDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/OmmXmlEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Payload.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Pipe.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/PostMsg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/PostMsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/PostMsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ProgrammaticConfigure.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/RefreshMsg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/RefreshMsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/RefreshMsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ReqMsg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ReqMsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/ReqMsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/RmtesBuffer.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/RmtesBufferImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Series.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/SeriesDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/SeriesEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/SeriesEntry.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/StaticDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/StatusMsg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/StatusMsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/StatusMsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/StreamId.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/SummaryData.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Thread.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/TimeOut.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/TunnelStreamLoginReqMsgImpl.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/TunnelStreamRequest.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/UpdateMsg.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/UpdateMsgDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/UpdateMsgEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Utilities.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/Vector.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/VectorDecoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/VectorEncoder.cpp"
    "${PROJECT_SOURCE_DIR}/Impl/VectorEntry.cpp"
    "${PROJECT_SOURCE_DIR}/../Include/Ema.h"
    "${PROJECT_SOURCE_DIR}/../Rdm/Impl/RdmUtilities.h"
    "${PROJECT_SOURCE_DIR}/../Rdm/Include/EmaRdm.h"
    "${PROJECT_SOURCE_DIR}/EmaVersion.h"
    "${PROJECT_SOURCE_DIR}/Impl/AckMsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/AckMsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/ActiveConfig.h"
    "${PROJECT_SOURCE_DIR}/Impl/ChannelCallbackClient.h"
    "${PROJECT_SOURCE_DIR}/Impl/ConfigErrorHandling.h"
    "${PROJECT_SOURCE_DIR}/Impl/Decoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/DefaultXML.h"
    "${PROJECT_SOURCE_DIR}/Impl/DictionaryCallbackClient.h"
    "${PROJECT_SOURCE_DIR}/Impl/DirectoryCallbackClient.h"
    "${PROJECT_SOURCE_DIR}/Impl/ElementListDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/ElementListEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/ElementListSetDef.h"
    "${PROJECT_SOURCE_DIR}/Impl/EmaBufferInt.h"
    "${PROJECT_SOURCE_DIR}/Impl/EmaBufferU16Int.h"
    "${PROJECT_SOURCE_DIR}/Impl/EmaConfigImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/EmaList.h"
    "${PROJECT_SOURCE_DIR}/Impl/EmaPool.h"
    "${PROJECT_SOURCE_DIR}/Impl/EmaStringInt.h"
    "${PROJECT_SOURCE_DIR}/Impl/EmaVector.h"
    "${PROJECT_SOURCE_DIR}/Impl/EncodeIterator.h"
    "${PROJECT_SOURCE_DIR}/Impl/Encoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/ErrorClientHandler.h"
    "${PROJECT_SOURCE_DIR}/Impl/ExceptionTranslator.h"
    "${PROJECT_SOURCE_DIR}/Impl/FieldListDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/FieldListEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/FieldListSetDef.h"
    "${PROJECT_SOURCE_DIR}/Impl/FilterListDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/FilterListEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/GenericMsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/GenericMsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/GetTime.h"
    "${PROJECT_SOURCE_DIR}/Impl/GlobalPool.h"
    "${PROJECT_SOURCE_DIR}/Impl/HashTable.h"
    "${PROJECT_SOURCE_DIR}/Impl/ItemCallbackClient.h"
    "${PROJECT_SOURCE_DIR}/Impl/LoginCallbackClient.h"
    "${PROJECT_SOURCE_DIR}/Impl/MapDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/MapEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/MsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/MsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/Mutex.h"
    "${PROJECT_SOURCE_DIR}/Impl/NoDataImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAnsiPageDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAnsiPageEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmArrayDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmArrayEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmAsciiDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmBaseImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmBufferDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerActiveConfig.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerConfigImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmConsumerImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDateDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDateTimeDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmDoubleDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmEnumDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmErrorDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmFloatDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInaccessibleLogFileExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmIntDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidConfigurationExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidHandleExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmInvalidUsageExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmLoggerClient.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmMemoryExhaustionExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNiProviderActiveConfig.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNiProviderConfigImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNiProviderImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmNonRwfEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOpaqueDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOpaqueEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmOutOfRangeExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmProviderImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmQosDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmRealDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmRmtesDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmStateDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmSystemExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmTimeDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUIntDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUnsupportedDomainTypeExceptionImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmUtf8Decoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmXmlDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/OmmXmlEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/Pipe.h"
    "${PROJECT_SOURCE_DIR}/Impl/PostMsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/PostMsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/ProgrammaticConfigure.h"
    "${PROJECT_SOURCE_DIR}/Impl/RefreshMsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/RefreshMsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/ReqMsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/ReqMsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/RmtesBufferImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/SeriesDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/SeriesEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/StaticDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/StatusMsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/StatusMsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/StreamId.h"
    "${PROJECT_SOURCE_DIR}/Impl/Thread.h"
    "${PROJECT_SOURCE_DIR}/Impl/TimeOut.h"
    "${PROJECT_SOURCE_DIR}/Impl/TunnelStreamLoginReqMsgImpl.h"
    "${PROJECT_SOURCE_DIR}/Impl/UpdateMsgDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/UpdateMsgEncoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/Utilities.h"
    "${PROJECT_SOURCE_DIR}/Impl/VectorDecoder.h"
    "${PROJECT_SOURCE_DIR}/Impl/VectorEncoder.h"
    "${PROJECT_SOURCE_DIR}/Include/AckMsg.h"
    "${PROJECT_SOURCE_DIR}/Include/Attrib.h"
    "${PROJECT_SOURCE_DIR}/Include/Common.h"
    "${PROJECT_SOURCE_DIR}/Include/ComplexType.h"
    "${PROJECT_SOURCE_DIR}/Include/Data.h"
    "${PROJECT_SOURCE_DIR}/Include/DataType.h"
    "${PROJECT_SOURCE_DIR}/Include/ElementEntry.h"
    "${PROJECT_SOURCE_DIR}/Include/ElementList.h"
    "${PROJECT_SOURCE_DIR}/Include/EmaBuffer.h"
    "${PROJECT_SOURCE_DIR}/Include/EmaBufferU16.h"
    "${PROJECT_SOURCE_DIR}/Include/EmaString.h"
    "${PROJECT_SOURCE_DIR}/Include/FieldEntry.h"
    "${PROJECT_SOURCE_DIR}/Include/FieldList.h"
    "${PROJECT_SOURCE_DIR}/Include/FilterEntry.h"
    "${PROJECT_SOURCE_DIR}/Include/FilterList.h"
    "${PROJECT_SOURCE_DIR}/Include/GenericMsg.h"
    "${PROJECT_SOURCE_DIR}/Include/Key.h"
    "${PROJECT_SOURCE_DIR}/Include/Map.h"
    "${PROJECT_SOURCE_DIR}/Include/MapEntry.h"
    "${PROJECT_SOURCE_DIR}/Include/Msg.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmAnsiPage.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmArray.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmArrayEntry.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmAscii.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmBuffer.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmConsumer.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmConsumerClient.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmConsumerConfig.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmConsumerErrorClient.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmConsumerEvent.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmDate.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmDateTime.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmDouble.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmEnum.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmError.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmFloat.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmInaccessibleLogFileException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmInt.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmInvalidConfigurationException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmInvalidHandleException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmInvalidUsageException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmMemoryExhaustionException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmNiProviderConfig.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmOpaque.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmOutOfRangeException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmProvider.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmProviderClient.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmProviderConfig.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmProviderErrorClient.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmProviderEvent.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmQos.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmReal.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmRmtes.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmState.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmSystemException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmTime.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmUInt.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmUnsupportedDomainTypeException.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmUtf8.h"
    "${PROJECT_SOURCE_DIR}/Include/OmmXml.h"
    "${PROJECT_SOURCE_DIR}/Include/Payload.h"
    "${PROJECT_SOURCE_DIR}/Include/PostMsg.h"
    "${PROJECT_SOURCE_DIR}/Include/RefreshMsg.h"
    "${PROJECT_SOURCE_DIR}/Include/ReqMsg.h"
    "${PROJECT_SOURCE_DIR}/Include/RmtesBuffer.h"
    "${PROJECT_SOURCE_DIR}/Include/Series.h"
    "${PROJECT_SOURCE_DIR}/Include/SeriesEntry.h"
    "${PROJECT_SOURCE_DIR}/Include/StatusMsg.h"
    "${PROJECT_SOURCE_DIR}/Include/SummaryData.h"
    "${PROJECT_SOURCE_DIR}/Include/TunnelStreamRequest.h"
    "${PROJECT_SOURCE_DIR}/Include/UpdateMsg.h"
    "${PROJECT_SOURCE_DIR}/Include/Vector.h"
    "${PROJECT_SOURCE_DIR}/Include/VectorEntry.h"
    "${PROJECT_SOURCE_DIR}/Ema.rc"
    )

set(
    EMA_INCLUDE_DIRS
    "${PROJECT_SOURCE_DIR}/../Include/Codec"
    "${PROJECT_SOURCE_DIR}/../Include/Transport"
    "${PROJECT_SOURCE_DIR}/.."
    "${PROJECT_SOURCE_DIR}/Impl"
    "${PROJECT_SOURCE_DIR}/Include"
    "${PROJECT_SOURCE_DIR}/../Include"
    "${PROJECT_SOURCE_DIR}/../Rdm/Impl"
    "${PROJECT_SOURCE_DIR}/../Rdm/Include"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Utils/Libxml2/include"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Utils/Libxml2/include/libxml"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Include"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Include/Codec"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Include/Transport"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Include/RDM"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Include/Reactor"
    "${PROJECT_SOURCE_DIR}/../../../Eta/Include/Util"
    )

add_library(ema-shared SHARED ${EMA_FILES})
target_compile_definitions(ema-shared PRIVATE ${ELEK_DEFINITIONS} EMA_LIBRARY_EXPORTS __EMA_COPY_ON_SET__)
target_compile_definitions(ema-shared INTERFACE __EMA_COPY_ON_SET__)
if(MSVC)
    target_compile_options(ema-shared PRIVATE ${ELEK_CPP_FLAGS} "/wd4091" "/wd4244" "/wd4477")
else()
    target_compile_options(ema-shared PRIVATE ${ELEK_CPP_FLAGS})
endif()
target_include_directories(ema-shared PRIVATE ${EMA_INCLUDE_DIRS})
if(MSVC)
    target_link_libraries(ema-shared PUBLIC stubs-shared va-shared libxml2-shared)
else()
    target_link_libraries(ema-shared PUBLIC stubs-shared va-shared libxml2)
endif()

add_library(ema-static STATIC ${EMA_FILES})
target_compile_definitions(ema-static PRIVATE ${ELEK_DEFINITIONS} __EMA_STATIC_BUILD__ __EMA_COPY_ON_SET__)
target_compile_definitions(ema-static INTERFACE __EMA_STATIC_BUILD__ __EMA_COPY_ON_SET__)
if(MSVC)
    target_compile_options(ema-static PRIVATE ${ELEK_CPP_FLAGS} "/wd4091" "/wd4244" "/wd4477")
else()
    target_compile_options(ema-static PRIVATE ${ELEK_CPP_FLAGS})
endif()
target_include_directories(ema-static PRIVATE ${EMA_INCLUDE_DIRS})
if(MSVC)
    target_link_libraries(ema-static PUBLIC stubs-static libxml2-static)
else()
    target_link_libraries(ema-shared PUBLIC stubs-static libxml2)
endif()
